--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,266 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin:0;
+  box-sizing: border-box
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  margin: 3rem auto;
+  width: 80%
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+div.header{
   display: flex;
-  flex-direction: column;
+  padding-bottom: 5px;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-bottom: 2px green solid
+
+}
+
+div.header nav a{
+  padding: 5px 5px;
+  text-align: center;
+  /* background-color: aqua; */
+  margin: 5px;
+  font:300 20px Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  color: dimgray
+}
+
+div.header nav a:hover{
+  color: black
+}
+
+div.header nav a.active{
+  color:white;
+  position: relative;
+}
+div.header nav a.active::after{
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: -3px;
+  border-bottom: 30px solid red;
+      border-left: 3px solid transparent;
+      border-right: 3px solid transparent;
+      height: 0;
+      width: 100%;
+  z-index: -1;
+}
+
+
+div.user-profile *{
+  margin: 2px;
+  vertical-align: middle
+}
+div.user-profile img{
+  height: 3rem;
+  border-radius: 50%
+}
+
+
+.questionlist{
+  margin: 1rem auto;
+  border: 1px grey solid;
+  width: 60%
+}
+
+.pickbutton{
+  width: 100%
+}
+.pickbutton span{
+  display: inline-block;
+  width: 50%;
+  border: 1px grey solid;
+  text-align: center;
+  cursor: pointer;
+  padding: 1rem 0;
+  font-weight: 600;
+  color: grey
+}
+
+.pickbutton span.activeTab{
+  color: black;
+  background-color: rgb(177, 177, 177);
+}
+
+.questioncard{
+  margin: 2rem auto;
+  width: 80%;
+  overflow: auto;
+  border: 1px gray inset
+}
+
+.username{
+  padding: 1em;
+  font-weight: 600;
+  background-color: gainsboro;
+}
+
+.img-container{
+  width: 6rem;
+  height: 6rem;
+  border-right:1px grey solid;
+  position: relative;
+float: left;
+}
+
+.img-container div{
+  width: 5rem;
+  height: 5rem;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%,-50%);
+}
+
+.questiontext {
+  margin: 1rem;
+  display: inline-block;
+}
+
+.usertext{
+  margin: 1rem;
+  display: inline-block;
+  float: left;
+  width: 20vw
+}
+
+.usertext div{
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between
+}
+
+button {
+	-moz-box-shadow:inset 0px 39px 0px -24px #e67a73;
+	-webkit-box-shadow:inset 0px 39px 0px -24px #e67a73;
+	box-shadow:inset 0px 39px 0px -24px #e67a73;
+	background-color:#e4685d;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	border:1px solid #ffffff;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:6px 15px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #b23e35;
+}
+
+button:hover {
+	background-color:#eb675e;
+}
+button:active {
+	position:relative;
+	top:1px;
+}
+
+.result-breakdown{
+  background-color: rgba(187, 187, 187, 0.3);
+  padding: 1rem;
+  border: 1px black dashed;
+  margin: 1rem;
+}
+
+.result-breakdown.active{
+  background-color: rgba(37, 181, 95, 0.249);
+  position: relative;
+    border: 1px black dashed;
+
+}
+
+.result-breakdown.active::before{
+  content: "Your  Choice";
+  background-color: green;
   color: white;
+  position: absolute;
+  left: 95%;
+  top: 0;
+  transform: translateY(-50%);
+  text-align: center;
+  border-radius: 50%;
+  overflow: auto;
+  padding: 0.5rem
+}
+.result-detail{
+  text-align: center;
+  font-style: italic;
+}    
+
+.progress-bar{
+  width: 100%;
+  background-color: rgb(142, 142, 142)
 }
 
-.App-link {
-  color: #61dafb;
+.progress-percentage{
+  background-color: aquamarine;
+  text-align: right;
+  padding: 0 1px 0 0
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.createform{
+  width: 60%;
+  margin: 2rem auto;
+}
+
+.createform input{
+  padding: 6px;
+  width: 80%;
+  margin: 1rem auto;
+  display: block
+}
+
+.create-result{
+  text-align: center;
+  color: #e67a73;
+  font-weight: 600
+}
+
+.user-card{
+  width: 60%;
+  border: 1px grey solid;
+  overflow: auto;
+  margin: 1rem auto;
+  position: relative;
+}
+
+.user-score{
+  text-align: center;
+  position: absolute;
+  transform: translateY(-50%);
+  top:50%;
+  left: 65%;
+  background-color: #b15249;
+  font-weight: 700;
+  color: white;
+  padding: 1rem;
+  border-radius: 10%;
+}
+
+.loginpage{
+  width: 50%;
+  margin: 2rem auto;
+  border: 1px gray solid;
+  text-align: center
+}
+.loginpage img{
+  width: 100%
+}
+.logout{
+  cursor: pointer;
+}
+.logout:hover{
+  text-decoration: underline dotted red;
+}
+
+.loginpage select{
+  display: inline-block;
 }
